testdata/baselines/reference/submodule/conformance/symbolType11.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
symbolType11.ts(1,9): error TS2304: Cannot find name 'Symbol'.
symbolType11.ts(7,1): error TS2872: This kind of expression is always truthy.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== symbolType11.ts (2 errors) ====
    var s = Symbol.for("logical");
            ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    s && s;
    s && [];
    0 && s;
    s || s;
    s || 1;
    ({}) || s;
    ~~~~
!!! error TS2872: This kind of expression is always truthy.